--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,8 @@ add_executable(cpppid_test
 	controller_derivative_test.cpp
 	controller_integral_test.cpp
 	controller_proportional_test.cpp
+
+	composer_adder_test.cpp
 )
 
 target_compile_features(cpppid_test
