env: Rename env to env-x86_64 to better express its purpose
And provide the right profile from the docker image as environment
variable.

--- a/Dockerfile_env-x86_64
+++ b/Dockerfile_env-x86_64
@@ -5,6 +5,8 @@ USER root
 RUN sudo apt-get update -qq \
 	&& apt-get install -y --no-install-recommends qemu-user
 
+ENV PROFILE x86_64
+
 WORKDIR cpppid
 
 COPY . .
