--- a/Dockerfile_env-x86_64
+++ b/Dockerfile_env-x86_64
@@ -2,10 +2,7 @@ FROM conanio/gcc8:1.14.1
 
 USER root
 
-RUN sudo apt-get update -qq \
-	&& apt-get install -y --no-install-recommends qemu-user
-
-ENV PROFILE x86_64
+ENV PROFILE ../profiles/x86_64
 
 WORKDIR cpppid
 
